--- a/Cocoon/Views/Partials/WebsiteNavbar.cshtml
+++ b/Cocoon/Views/Partials/WebsiteNavbar.cshtml
@@ -41,9 +41,9 @@
                     <li data-id="Home"><a href="@Url.Action("Index", "Home")?#Home">@Website.Home</a></li>
                     <li data-id="Cats"><a href="@Url.Action("Index", "Home")?#Cats">@Website.Categories</a></li>
                     @*@foreach (var cat in Model.Categories)
-                    {
-                        <li><a href="@Url.Action("View", "SubCategories", new { CatId = cat.Id })">@(culture=="ar"? cat.NameAr: cat.NameEn)</a></li>
-                    }*@
+                        {
+                            <li><a href="@Url.Action("View", "SubCategories", new { CatId = cat.Id })">@(culture=="ar"? cat.NameAr: cat.NameEn)</a></li>
+                        }*@
                     @*<li data-id="New"><a href="@Url.Action("Index", "Home")?#New">@Website.Latest</a></li>*@
                     @*<li data-id="Sell"><a href="@Url.Action("Index", "Home")?#Sell">@Website.MostSold</a></li>*@
                     @*<li data-id="Offer"><a href="@Url.Action("Index", "Home")?#Offer">@Website.Offers</a></li>*@
@@ -174,6 +174,7 @@
             <li><i class="@(culture == "ar" ? "fas fa-wallet" : "")"></i> <a href="@Url.Action("Index","Wallets")">@(culture == "ar" ? "محفظتى" : "My Wallet")</a> <i class="@(culture != "ar" ? "fas fa-wallet" : "")"></i></li>
             <li><i class="@(culture == "ar" ? "fas fa-bell" : "")"></i> <a href="@Url.Action("All", "Notifications")">@Website.Notifications</a> <i class="@(culture != "ar" ? "fas fa-bell" : "")"></i></li>
             @*<li><i class="@(culture == "ar" ? "fas fa-question-circle" : "")"></i> <a href="@Url.Action("Index", "FAQs")">@Website.FAQs</a> <i class="@(culture != "ar" ? "fas fa-question-circle" : "")"></i></li>*@
+            <li><i class="@(culture == "ar" ? "fa fa-key" : "")"></i> <a href="@Url.Action("ChangePassword", "Account")">@(culture == "ar" ? "تغير كلمة المرور" : "Change Password") <i class="@(culture != "ar" ? "fa fa-key" : "")"></i></a></li>
             <li><i class="@(culture == "ar" ? "fas fa-sign-out-alt" : "")"></i> <a href="javascript:document.getElementById('logoutForm').submit()">@Website.Logout</a> <i class="@(culture != "ar" ? "fas fa-sign-out-alt" : "")"></i></li>
         </ul>
         @*<i class="fas fa-chevron-up User close-icon"></i>*@
